Edición de Vistas

--- a/ProyectoFinalKermesse/Views/Gastoes/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Gastoes/Index.cshtml
@@ -1,94 +1,122 @@
 ﻿@model IEnumerable<ProyectoFinalKermesse.Models.Gasto>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Gastos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.fechGasto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.concepto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.monto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.fechaCreacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.fechaModificacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.fechaEliminacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CategoriaGasto.nombreCategoria)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Kermesse1.nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Usuario.userName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Usuario1.userName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Usuario2.userName)
-        </th>
-        <th></th>
-    </tr>
+    <ol class="breadcrumb" style="background:none; font-size: 18px">
+        <li><a href="#">  @Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Gestiones", "Index", "Gestion", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li class="active"><a href="#">  @Html.ActionLink("Gastos", "Index", "Gastoes", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.fechGasto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.concepto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.monto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.fechaCreacion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.fechaModificacion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.fechaEliminacion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CategoriaGasto.nombreCategoria)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Kermesse1.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Usuario.userName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Usuario1.userName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Usuario2.userName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.idGasto }) |
-            @Html.ActionLink("Details", "Details", new { id=item.idGasto }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.idGasto })
-        </td>
-    </tr>
-}
+    </ol>
+</div>
 
-</table>
+<div class="carousel-inner" role="listbox">
+    <div class="item active">
+        <img src="~/fonts/BannersKermesse/21.png" alt="Banner 6">
+
+    </div>
+
+</div>
+
+<div class="container">
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.fechGasto)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.concepto)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.monto)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.fechaCreacion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.fechaModificacion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.fechaEliminacion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CategoriaGasto.nombreCategoria)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Kermesse1.nombre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Usuario.userName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Usuario1.userName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Usuario2.userName)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.fechGasto)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.concepto)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.monto)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.fechaCreacion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.fechaModificacion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.fechaEliminacion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CategoriaGasto.nombreCategoria)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Kermesse1.nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.userName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario1.userName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario2.userName)
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.idGasto }, new { @style = "color: #779FA1" }) 
+                   
+                    @Html.ActionLink("Detalles", "Details", new { id = item.idGasto }, new { @style = "color: #779FA1" }) 
+                   
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idGasto }, new { @style = "color: #779FA1" })
+                </td>
+            </tr>
+        }
+
+    </table>
+
+    <hr />
+
+    <p>
+        <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
+            @Html.ActionLink("Agregar nuevo", "Create", "Gastoes", new { @style = "color:white;" })
+            <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
+        </button>
+    </p>
+
+</div> 
