--- a/ProyectoFinalKermesse/Views/RolUsuarios/Details.cshtml
+++ b/ProyectoFinalKermesse/Views/RolUsuarios/Details.cshtml
@@ -1,35 +1,56 @@
 ﻿@model ProyectoFinalKermesse.Models.RolUsuario
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalle Rol Usuario";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>RolUsuario</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Rol1.rolDescripcion)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Rol1.rolDescripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Usuario1.userName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Usuario1.userName)
-        </dd>
-
-    </dl>
+    <ol class="breadcrumb" style="background:none; font-size: 18px">
+        <li><a href="#">  @Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Gestiones", "Index", "Gestion", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Rol Usuarios", "Index", "RolUsuarios", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li class="active"> Detalle  </li>
+    </ol>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.idRolUsuario }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<div class="container">
+    <h2>Detalles</h2>
+    <h3> Rol Usuarios </h3>
+
+    <div>
+        
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Rol1.rolDescripcion)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Rol1.rolDescripcion)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Usuario1.userName)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Usuario1.userName)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        <button class="btn-primary" style="background-color: #779FA1">
+            <span class="glyphicon glyphicon-hand-left" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
+            @Html.ActionLink("Regresar", "Index", "RolUsuarios", new { @style = "color:white;" })
+        </button>
+
+        <button type="submit" class="btn-primary" style="background-color: #779FA1">
+            <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
+            @Html.ActionLink("Editar", "Edit", new { id = Model.idRolUsuario }, new { @style = "color:white;" })
+        </button>
+    </p>
+
+</div> 
