--- a/ProyectoFinalKermesse/Views/IngresoComunidadDets/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/IngresoComunidadDets/Index.cshtml
@@ -1,58 +1,88 @@
 ﻿@model IEnumerable<ProyectoFinalKermesse.Models.IngresoComunidadDet>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Ingreso de Comunidad";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.denominacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.cantidad)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.subTotalBono)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ControlBono.nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IngresoComunidad1.idIngresoComunidad)
-        </th>
-        <th></th>
-    </tr>
+    <ol class="breadcrumb" style="background:none; font-size: 18px">
+        <li><a href="#">  @Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Gestiones", "Index", "Gestion", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li class="active"><a href="#">  @Html.ActionLink("Detalle de Ingreso de Comunidad", "Index", "IngresoComunidadDets", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.denominacion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.cantidad)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.subTotalBono)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ControlBono.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IngresoComunidad1.idIngresoComunidad)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.idIngresoComunidadDet }) |
-            @Html.ActionLink("Details", "Details", new { id=item.idIngresoComunidadDet }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.idIngresoComunidadDet })
-        </td>
-    </tr>
-}
+    </ol>
+</div>
 
-</table>
+<div class="carousel-inner" role="listbox">
+    <div class="item active">
+        <img src="~/fonts/BannersKermesse/17.png" alt="Banner 6">
+
+    </div>
+
+</div>
+
+<div class="container">
+
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.denominacion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.cantidad)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.subTotalBono)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ControlBono.nombre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IngresoComunidad1.idIngresoComunidad)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.denominacion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.cantidad)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.subTotalBono)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ControlBono.nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IngresoComunidad1.idIngresoComunidad)
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.idIngresoComunidadDet }, new { @style = "color: #779FA1;" })
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
+                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                    @Html.ActionLink("Detalles", "Details", new { id = item.idIngresoComunidadDet }, new { @style = "color: #779FA1;" }) |
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idIngresoComunidadDet }, new { @style = "color: #779FA1;" })
+                </td>
+            </tr>
+        }
+
+    </table>
+
+    <hr />
+
+    <p>
+        <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
+            @Html.ActionLink("Agregar nuevo", "Create", "IngresoComunidadDets", new { @style = "color:white;" })
+            <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
+        </button>
+    </p>
+
+</div> 
