--- a/ProyectoFinalKermesse/Views/Kermesses/Delete.cshtml
+++ b/ProyectoFinalKermesse/Views/Kermesses/Delete.cshtml
@@ -1,121 +1,146 @@
 ﻿@model ProyectoFinalKermesse.Models.Kermesse
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar Kermesse";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Kermesse</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.nombre)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.fInicio)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.fInicio)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.fFinal)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.fFinal)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.descripcion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.estado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.estado)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.fechaCreacion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.fechaCreacion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.fechaModificacion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.fechaModificacion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.fechaEliminacion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.fechaEliminacion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Parroquia1.nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Parroquia1.nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Usuario.userName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Usuario.userName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Usuario1.userName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Usuario1.userName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Usuario2.userName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Usuario2.userName)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+    <ol class="breadcrumb" style="background:none; font-size: 18px">
+        <li><a href="#">  @Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Gestiones", "Index", "Gestion", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Kermesse", "Index", "Kermesses", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li class="active"> Eliminar  </li>
+    </ol>
 </div>
+
+<div class="container">
+    <h2>Eliminar</h2>
+    <h3>Kermesse</h3>
+
+    <h3>¿Esta seguro que desea eliminar esto?</h3>
+    <div>
+
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.nombre)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.fInicio)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.fInicio)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.fFinal)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.fFinal)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.descripcion)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.descripcion)
+            </dd>
+
+            @*<dt>
+                @Html.DisplayNameFor(model => model.estado)
+            </dt>*@
+
+            @*<dd>
+                @Html.DisplayFor(model => model.estado)
+            </dd>*@
+
+            <dt>
+                @Html.DisplayNameFor(model => model.fechaCreacion)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.fechaCreacion)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.fechaModificacion)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.fechaModificacion)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.fechaEliminacion)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.fechaEliminacion)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Parroquia1.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Parroquia1.nombre)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Usuario.userName)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Usuario.userName)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Usuario1.userName)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Usuario1.userName)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Usuario2.userName)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Usuario2.userName)
+            </dd>
+
+        </dl>
+
+        @using (Html.BeginForm())
+        {
+    @Html.AntiForgeryToken()
+
+                    <div class="form-actions no-color">
+                        <button class="btn-primary" style="background-color: #779FA1">
+                            <span class="glyphicon glyphicon-hand-left" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
+                            @Html.ActionLink("Regresar", "Index", "Kermesse", new { @style = "color:white;" })
+                        </button>
+
+                        <button type="submit" class="btn-primary" style="background-color: red">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
+                            Eliminar
+                        </button>
+
+                    </div>
+                    }
+
+
+    </div>
+
+</div> 
