--- a/ProyectoFinalKermesse/Views/ListaPrecioDets/Delete.cshtml
+++ b/ProyectoFinalKermesse/Views/ListaPrecioDets/Delete.cshtml
@@ -1,49 +1,71 @@
 ﻿@model ProyectoFinalKermesse.Models.ListaPrecioDet
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar Detalle de Lista de Precio";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ListaPrecioDet</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.precioVenta)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.precioVenta)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ListaPrecio1.nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ListaPrecio1.nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Producto1.nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Producto1.nombre)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+    <ol class="breadcrumb" style="background:none; font-size: 18px">
+        <li><a href="#">  @Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Gestiones", "Index", "Gestion", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Detalle de Lista de Precio", "Index", "ListaPrecioDets", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li class="active"> Eliminar  </li>
+    </ol>
 </div>
+
+<div class="container">
+    <h2>Eliminar</h2>
+    <h3>Detalle de Lista de Precio </h3>
+
+    <h3>¿Esta seguro que desea eliminar esto?</h3>
+    <div>
+
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.precioVenta)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.precioVenta)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ListaPrecio1.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ListaPrecio1.nombre)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Producto1.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Producto1.nombre)
+            </dd>
+
+        </dl>
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <button class="btn-primary" style="background-color: #779FA1">
+                    <span class="glyphicon glyphicon-hand-left" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
+                    @Html.ActionLink("Regresar", "Index", "ListaPrecioDets", new { @style = "color:white;" })
+                </button>
+
+                <button type="submit" class="btn-primary" style="background-color: red">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true" style="float: left; color: #FFFFFF"></span>
+                    Eliminar
+                </button>
+
+            </div>
+        }
+    </div>
+</div> 
